k8s/coma/apps/landing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing
  namespace: landing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: default-https-redirect@kubernetescrd,default-hsts@kubernetescrd
spec:
  rules:
    - host: "artichoke.cc"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: landing
                port:
                  number: 80
    - host: "artichokenetwork.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: artichokenetwork-moved
                port:
                  number: 80
    - host: "*.artichokenetwork.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: artichokenetwork-moved
                port:
                  number: 80
  tls:
    - hosts:
        - "artichoke.cc"
      secretName: artichokecc-cert
    - hosts:
        - "artichokenetwork.com"
        - "*.artichokenetwork.com"
      secretName: artichokenetwork-com-cert
